    their own transaction; when it does, the Ownership(), UtilizeUser(),
    and UtilizeGroup() policies will create dependencies on the
    appropriate info-* packages.
  * The networked repository server and client code has been changed
    to use the 'deflate' Content-encoding type instead of 'zlib',
    which makes the code RFC 2616 (HTTP 1.1) compliant.

Changes in 0.61.1:
  * Cleaned up error message which results from Conary not being able to
    determine which trove to remove when a new one is installed
  * Dependency object use slots
  * Hash values for DependencySet, Version, and Branch objects are cached
  * UIDs and GIDs that cannot be mapped to symbolic names no
    longer cause the buildpackage code to traceback.  The ownerships
    from the filesystem were never used anyway, so it's safe to assume
    that all files are owned by root:root
  * Implemented proper updateall
  * Files in troves are downloadable from the repository browser.
  * Troves in the repository browser are separated by first letter
    instead of showing all troves in one page.

Changes in 0.61.0:
  * New functionality for maintaining user groups: renaming and updating
    members
  * Added repository interfaces for deleting users and groups
  * Added a repository iterator function to list the members of a group
  * The web interface to the Conary repository now has a repository
    contents browser, accessible either from the main page (if you are
    logged into the web interface), or from the /browse url. Example:
        http://conary.example.com/conary/browse
  * A bug preventing all access to the web interface if an anonymous
    user existed has been fixed.
  * "Large" updates are split into multiple pieces which are downloaded
     and installed independently of one another
  * Trove updates are tracked through collections
  * Group handling completely rewritten to function as a three way merge
    instead of a set of heuristics